# LMGC_GPUver

LMGC90_GPUver/: .gitlab-ci.yml  CMakeLists.txt
LMGC90_GPUver/ci_scripts/: Dockerfile_archpy39hdf5  Dockerfile_ub18cross  Dockerfile_ub18py36hdf5  Dockerfile_ub20py38hdf5  Dockerfile_ub22py310hdf5  Dockerfile_ub24py312hdf5
LMGC90_GPUver/docs/: .buildinfo  additional_index.html  chipy_bulk.html  chipy_common.html  chipy_contactor.html  chipy_index.html  chipy_interaction.html  chipy_kernel.html  chipy_linear.html  chipy_lmgc90.html  chipy_macro.html  chipy_nonlinear.html  chipy_rigid.html  chipy_tact.html  dev_cmake.html  dev_contact_law.html  dev_development.html  dev_index.html  dev_presentation.html  dev_solver.html  dev_theory.html  genindex.html  gmsh_classes.html  gmsh_index.html  index.html  objects.inv  post_index.html  pre_classes.html  pre_granular.html  pre_index.html  pre_interaction.html  pre_masonry.html  pre_material.html  pre_mesh.html  pre_miscellaneous.html  pre_model.html  pre_philosophie.html  pre_post.html  pre_visibility.html  py-modindex.html  (+4 more)
LMGC90_GPUver/docs/_downloads/45afbeb0a9155c011dc7118c837e3fae/: philosophie.py
LMGC90_GPUver/docs/_downloads/87a4023b01874fcf169edd7e09bb7125/: granular.py
LMGC90_GPUver/docs/_modules/: index.html
LMGC90_GPUver/docs/_modules/pylmgc90/: gmshutils.html
LMGC90_GPUver/docs/_sources/: chipy_interaction.rst.txt  index.rst.txt  pre_mesh.rst.txt  pre_miscellaneous.rst.txt  pre_philosophie.rst.txt  restart_index.rst.txt  vizpost_index.rst.txt
LMGC90_GPUver/docs/_static/: documentation_options.js
LMGC90_GPUver/examples/RIGID_2D/1024DK_BoxJC/: command.py
LMGC90_GPUver/examples/RIGID_2D/1024DK_BoxJC_ElectricalConduction/: command.py
LMGC90_GPUver/examples/RIGID_2D/1DK_BoxJC/: command.py
LMGC90_GPUver/examples/RIGID_2D/200DK_BoxJC_MD/: command.py
LMGC90_GPUver/examples/RIGID_2D/4POLYG_SHEAR_CYCLE_CZM/: command.py
LMGC90_GPUver/examples/RIGID_2D/500PL_PerioBoxJC/: command.py
LMGC90_GPUver/examples/RIGID_2D/BouncingBallsDK/: command.py
LMGC90_GPUver/examples/RIGID_2D/BridgePL_GroundJC/: command.py
LMGC90_GPUver/examples/RIGID_2D/DISKx_Vther/: command.py  gen_sample.py
LMGC90_GPUver/examples/RIGID_2D/Drum_THERMORIGID/: command.py  gen_drum.py
LMGC90_GPUver/examples/RIGID_2D/POLYG_Vther/: command.py
LMGC90_GPUver/examples/RIGID_2D/SourcePointPL_BoxJC/: command.py
LMGC90_GPUver/examples/RIGID_2D/ViscoElasticRepell_BouncingBall/: command.py
LMGC90_GPUver/examples/RIGID_2D/WallPL_GroundJC/: command.py
LMGC90_GPUver/examples/RIGID_2D/arche_plein_ceintre_2D/: command.py
LMGC90_GPUver/examples/RIGID_2D/arche_shrink/: command.py
LMGC90_GPUver/examples/RIGID_2D/basic_NARD/: command.py
LMGC90_GPUver/examples/RIGID_2D/clusterDKPL_GroundJC/: command.py
LMGC90_GPUver/examples/RIGID_2D/couette/: command.py  gen_sample.py
LMGC90_GPUver/examples/RIGID_2D/poteau_shrink/: command.py
LMGC90_GPUver/examples/RIGID_2D/siloDK_hoperJC/: command.py
LMGC90_GPUver/examples/RIGID_3D/100_PR_PerioBox/: command.py
LMGC90_GPUver/examples/RIGID_3D/1SP_BoxPL/: command.py
LMGC90_GPUver/examples/RIGID_3D/1SP_PL/: command.py
LMGC90_GPUver/examples/RIGID_3D/1SP_PR/: command.py
LMGC90_GPUver/examples/RIGID_3D/1_ClusterSP_2_PL/: command.py
LMGC90_GPUver/examples/RIGID_3D/1_PR_Box_ClusterPL/: command.py
LMGC90_GPUver/examples/RIGID_3D/1_SP_Box_ClusterPL/: command.py
LMGC90_GPUver/examples/RIGID_3D/Bridge_PR/: command.py
LMGC90_GPUver/examples/Tutorials/: Readme.ipynb
LMGC90_GPUver/examples/mecaMAILx_3D/: CMakeLists.txt
LMGC90_GPUver/examples/mecaMAILx_RIGID_3D/: CMakeLists.txt
LMGC90_GPUver/src/: CMakeLists.txt
LMGC90_GPUver/src/Bindings/: CMakeLists.txt  Demmefi_ExternalModels_v7.f90  noDemmefi_ExternalModels.f90
LMGC90_GPUver/src/ChiPy/: CMakeLists.txt  chipy.i.in
LMGC90_GPUver/src/contribs/: CMakeLists.txt  Mumps_SparseLinearAlgebra.f90  README
LMGC90_GPUver/src/kernel/: gpu_module.cu  mod_nlgs.f90
LMGC90_GPUver/test/Basics/: CMakeLists.txt
LMGC90_GPUver/test/set_work_dir/: command.py
(+545 files in other folders)
